# App

./: .gitignore  .replit  README.md  app.py  models.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-data-bs-theme-dark-head-meta-charset-UTF-8-met-1755195945241_1755195945281.txt
static/css/: style.css
static/js/: chat.js
templates/: index.html  login.html  login_simple.html  register.html  set_nickname.html
