[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Chat application with Google OAuth authentication"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "python-jose>=3.3.0",
    "requests>=2.31.0",
    "authlib>=1.3.0",
    "python-dotenv>=0.19.0"
     "flask_wtf
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=4.1.0",
    "flake8>=7.0.0",
    "black>=24.4.2",
    "python-dotenv>=0.19.0"
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"